# python-basics

./: README.md  pyproject.toml
api/: items.py  main.py
api/users/: crud.py  dependencies.py  schemas.py  views.py
base-types/: main.py
control-flows/: main.py
cycles/: main.py
data-structures/: main.py
db/: main.py
decorators/: main.py
exceptions/: main.py
files/: config.ini  config_main.py  file.json  file.txt  main_csv.py  main_json.py  main_txt.py
functions/: main.py
functools_itertools/: main_functools.py  main_itertools.py
gui-app/: main.py  timer.py
interfaces/: main.py  power_switch.py
interfaces/switchables/: lightbulb.py
many_to_many/: main.py
metaclasses/: main.py
modules/: main.py
modules/models/: user.py
oop/: fifth_demo.py  first_demo.py  fourth_demo.py  second_demo.py  seventh_demo.py  sixth_demo.py  third_demo.py
os_paths/: file.txt  os_module.py  pathlib_module.py
pytest_testing/: main.py
pytest_testing/testing/: test_solver.py
relations/: main.py
schemas/: dataclasses_main.py  namedtuple_main.py  pydantic_main.py
tasks/: task_1.py  task_2.py  task_3.py
tasks/task_3/: api.py  main.py
tasks/task_3/views/employees/: api.py  crud.py  schemas.py
unit_testing/: db_helper.py  solver.py
unit_testing/testing/: test_db_helper.py  test_solver.py
